--- a/portraits-viz.qmd
+++ b/portraits-viz.qmd
@@ -248,16 +248,16 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">that the son of an emperor<br></span>
 <span class="verse-line">could have taken her with great honor.<br></span>
 .....<br>
-<span class="verse-line"><span class="folio-number">338va</span>So she went by day and by night<br></span>
-<span class="verse-line">hungry, thirsty, and on hard beds.<br></span>
-<span class="verse-line">She was so deep in the wood<br></span>
-<span class="verse-line">that she became entirely wild there,<br></span>
+<span class="verse-line"><span class="folio-number">338va</span>She went so long by day and by night,<br></span>
+<span class="verse-line">hungry and thirsty and on hard beds.<br></span>
+<span class="verse-line">There she was so deep in the wood<br></span>
+<span class="verse-line">that she became entirely wild,<br></span>
 <span class="verse-line">but she <span class="negation">never</span> forgot<br></span>
 <span class="verse-line"><span class="line-number">618</span>to pray to saint Mary.<br></span>
-<span class="verse-line">Often she remembered the image<br></span>
+<span class="verse-line">Often, she remembered the image<br></span>
 <span class="verse-line">on which she had made her pledge.<br></span>
-<span class="verse-line">Soon her shoes were worn out,<br></span>
-<span class="verse-line">and soon her clothes were all torn up.<br></span>
+<span class="verse-line">Soon, her shoes were worn out,<br></span>
+<span class="verse-line">and soon, her clothes were all torn up.<br></span>
 <span class="verse-line"><span class="line-number">623</span><span class="sequence-change">Her body was left totally naked.<br></span></span>
 <span class="verse-line"><span class="sequence-change">She <span class="negation">did not</span> have clothing that was <span class="negation">not</span> in tatters.<br></span></span>
 <span class="verse-line">Her own flesh <span class="color-word">changed color</span>,<br></span>
@@ -273,9 +273,9 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">633</span>and her chin was so <span class="color-word">black<br></span></span>
 <span class="verse-line"><span class="unique-verse">as though it were <span class="color-word">tainted with charcoal</span>.<br></span></span>
 <span class="verse-line"><span class="unique-verse">Thinned</span> were her eyes.<br></span>
-<span class="verse-line">There was <span class="negation">not a shred</span> of pride now.<br></span>
+<span class="verse-line">There was <span class="negation">not a shred</span> of pride there now.<br></span>
 <span class="verse-line">If you saw her ears,<br></span>
-<span class="verse-line"><span class="line-number">638</span>you would really take in a great marvel.<br></span>
+<span class="verse-line"><span class="line-number">638</span>it would appear to you a great marvel<br></span>
 <span class="verse-line">for they were <span class="color-word">black</span> and cracked.<br></span>
 <span class="verse-line"><span class="unique-verse">Her <span class="color-word">white</span> flesh changed entirely<br></span></span>
 <span class="verse-line"><span class="color-word">Black</span> and <span class="unique-verse">changed</span> was her chest.<br></span>
@@ -301,19 +301,19 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="negation">It was no marvel</span> that she was <span class="color-word">blackened<br></span></span>
 <span class="verse-line">for she led such a severe life.<br></span>
 <span class="verse-line"><span class="line-number">663</span>After more than forty years in the nude,<br></span>
-<span class="verse-line"><span class="negation">it was no marvel</span> she was wooly.<br></span>
+<span class="verse-line"><span class="negation">it was no marvel</span> she was woolly.<br></span>
 <span class="verse-line">She had poor provisions with her.<br></span>
 <span class="verse-line">Pray, may Jesus have mercy on her.<br></span>
-<span class="verse-line">She had two breads of <span class="negation">no great size</span>.<br></span>
+<span class="verse-line">She had two loaves of <span class="negation">no great size</span>.<br></span>
 <span class="verse-line"><span class="line-number">668</span>On these, she lived for many years.<br></span>
 <span class="verse-line">In the first year, they became hard<br></span>
 <span class="verse-line">as though they were building stones.<br></span>
 <span class="verse-line">Each day, Mary ate some,<br></span>
 <span class="verse-line">but this was a small portion.<br></span>
 <span class="verse-line"><span class="line-number">673</span>As soon as she had eaten up all her bread,<br></span>
-<span class="verse-line">then she plucked the grass nearby.<br></span>
+<span class="verse-line">then she plucked the grass of the field.<br></span>
 <span class="verse-line">Like other beasts she ate it.<br></span>
-<span class="verse-line">She provided herself with <span class="negation">nothing else</span>.<br></span>
+<span class="verse-line"><span class="negation">None</span> of this bothered her.<br></span>
 <span class="verse-line"><span class="unique-verse">On her hands,</span> she drank the water from the stream<br></span>
 <span class="verse-line"><span class="line-number">678</span>as she had <span class="negation">no</span> other vessel.<br></span>
 <span class="verse-line">She <span class="negation">does not</span> bemoan her sins<br></span>
@@ -325,10 +325,10 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">In the first year, the devil<br></span>
 <span class="verse-line">often used to tempt her,<br></span>
 <span class="verse-line">making her remember all<br></span>
-<span class="verse-line"><span class="line-number">688</span>that she used to always love.<br></span>
-<span class="verse-line">The good eats and the beautiful places<br></span>
+<span class="verse-line"><span class="line-number">688</span>that she used to always love:<br></span>
+<span class="verse-line">the good eats and the fine places<br></span>
 <span class="verse-line">where she was used to playing games.<br></span>
-<span class="verse-line">Now, she was so blissful<br></span>
+<span class="verse-line">Now, she felt so blessed<br></span>
 <span class="verse-line">that she had forgotten all.<br></span>
 <span class="verse-line"><span class="folio-number">339ra</span><span class="negation">Never</span> then in all her life<br></span>
 <span class="verse-line"><span class="negation">did</span> she think <span class="negation">more</span> of folly.<br></span>
@@ -577,7 +577,7 @@ To read these passages in translation, hover over each column with your cursor.
 <div class="empty-line"></div>
 <div class="empty-line"></div>
 <span class="verse-line">Soon, her clothes were worn out,<br></span>
-<span class="verse-line"><span class="line-number">572</span>and soon her soles were torn up.<br></span>
+<span class="verse-line"><span class="line-number">572</span>and soon, her soles were torn up.<br></span>
 <div class="empty-line"></div>
 <div class="empty-line"></div>
 <span class="verse-line"><span class="sequence-change">As much from winter as from summer,<br></span></span>
@@ -595,9 +595,9 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="unique-verse">Thinned</span> were her eyes.<br></span>
 <span class="verse-line">There was <span class="negation">not a shred</span> of pride there now.<br></span>
 <span class="verse-line"><span class="line-number">587</span>If you saw her ears,<br></span>
-<span class="verse-line">it would seem to you a great marvel<br></span>
+<span class="verse-line">it would occur to you a great marvel<br></span>
 <span class="verse-line">for they were so skinny and deteriorated<br></span>
-<span class="verse-line">and all wooly with <span class="color-word">white</span> hairs.<br></span>
+<span class="verse-line">and all woolly with <span class="color-word">white</span> hairs.<br></span>
 <span class="verse-line"><span class="color-word">Black</span> and hairy was her chest.<br></span>
 <span class="verse-line"><span class="line-number">592</span>It seemed like <span class="color-word">black</span> thorny bark.<br></span>
 <div class="empty-line"></div>
@@ -609,7 +609,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="sequence-change">She had large nails.<br></span></span>
 <span class="verse-line"><span class="sequence-change">She reshaped them with her teeth.<br></span></span>
 <span class="verse-line"><span class="line-number">597</span>Her feet were skinny and split,<br></span>
-<span class="verse-line">and in many places were deeply wounded<br></span>
+<span class="verse-line">and, in many places, were deeply wounded<br></span>
 <span class="verse-line">for she <span class="negation">did not</span> protect them from thorns<br></span>
 <span class="verse-line">as she went through the wilderness.<br></span>
 <span class="verse-line">So it seemed to her, in her mind,<br></span>
@@ -622,7 +622,7 @@ To read these passages in translation, hover over each column with your cursor.
 <div class="empty-line"></div>
 <span class="verse-line"><span class="sequence-change">She <span class="negation">does not</span> bemoan her sins<br></span></span>
 <span class="verse-line"><span class="sequence-change">as her body is so chastised.<br></span></span>
-<span class="verse-line"><span class="line-number">607</span><span class="sequence-change"><span class="negation">It was no marvel</span> that she was wooly;<br></span></span>
+<span class="verse-line"><span class="line-number">607</span><span class="sequence-change"><span class="negation">It was no marvel</span> that she was woolly;<br></span></span>
 <span class="verse-line"><span class="sequence-change">for forty years, she went totally nude.<br></span></span>
 <div class="empty-line"></div>
 <div class="empty-line"></div>
@@ -645,7 +645,7 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">The devil came before her first.<br></span>
 <span class="verse-line">He used to <span class="unique-verse">annoy</span> her so much,<br></span>
 <span class="verse-line"><span class="line-number">627</span>making her remember<br></span>
-<span class="verse-line">whatever she once used to love,<br></span>
+<span class="verse-line">whatever she once used to love:<br></span>
 <span class="verse-line">the fine delights and the fine <span class="unique-verse">games</span><br></span>
 <span class="verse-line">in which she used to take <span class="unique-verse">pleasure</span>.<br></span>
 <span class="verse-line">She felt so blessed<br></span>
@@ -888,16 +888,16 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">that the son of an emperor<br></span>
 <span class="verse-line">could have taken her with great honor.<br></span>
 .....<br>
-<span class="verse-line"><span class="line-number">623</span>So she went in the day as in the night<br></span>
+<span class="verse-line"><span class="line-number">623</span>She went so long in the day as in the night,<br></span>
 <span class="verse-line">hungry, thirsty, and on hard beds.<br></span>
-<span class="verse-line">She was so deep in the wood<br></span>
-<span class="verse-line">that she became entirely wild there,<br></span>
+<span class="verse-line">There she was so deep in the wood<br></span>
+<span class="verse-line">that she became entirely wild,<br></span>
 <span class="verse-line">but she <span class="negation">never</span> forgot<br></span>
 <span class="verse-line"><span class="line-number">628</span>to pray to saint Mary.<br></span>
-<span class="verse-line">Often she remembered the image<br></span>
+<span class="verse-line">Often, she remembered the image<br></span>
 <span class="verse-line">on which she had made her pledge.<br></span>
-<span class="verse-line">Soon her clothes were worn out<br></span>
-<span class="verse-line">and soon her soles were stripped.<br></span>
+<span class="verse-line">Soon, her clothes were worn out,<br></span>
+<span class="verse-line">and soon, her soles were stripped.<br></span>
 <span class="verse-line"><span class="line-number">633</span>As her clothes were in tatters,<br></span>
 <span class="verse-line">her body was left totally naked.<br></span>
 <span class="verse-line">Her own flesh <span class="color-word">changed color,<br></span></span>
@@ -915,10 +915,10 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="color-word">Tinted and blackened</span> were her eyes.<br></span>
 <span class="verse-line"><span class="line-number">648</span>There was <span class="negation">not any</span> pride there now.<br></span>
 <span class="verse-line">If you saw her ears,<br></span>
-<span class="verse-line">they would really be to you a great marvel<br></span>
+<span class="verse-line">it would be a great marvel to you<br></span>
 <span class="verse-line">for they were skinny and cracked<br></span>
-<span class="verse-line">and all wooly with <span class="color-word">white</span> hairs.<br></span>
-<span class="verse-line"><span class="line-number">653</span><span class="color-word">Black</span> and wooly was her chest.<br></span>
+<span class="verse-line">and all woolly with <span class="color-word">white</span> hairs.<br></span>
+<span class="verse-line"><span class="line-number">653</span><span class="color-word">Black</span> and woolly was her chest.<br></span>
 <span class="verse-line">It seemed like thorny bark.<br></span>
 <span class="verse-line">She had <span class="negation">no more</span> flesh in her breast,<br></span>
 <span class="verse-line"><span class="negation">no more</span> than there is in a glove.<br></span>
@@ -941,19 +941,19 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">673</span><span class="negation">it was no wonder</span> that she was <span class="color-word">blackened<br></span></span>
 <span class="verse-line">for she led such a severe life.<br></span>
 <span class="verse-line">After more than forty years in the nude,<br></span>
-<span class="verse-line"><span class="negation">it was no wonder</span> she was wooly.<br></span>
+<span class="verse-line"><span class="negation">it was no wonder</span> she was woolly.<br></span>
 <span class="verse-line">She had poor provisions with her.<br></span>
 <span class="verse-line"><span class="line-number">678</span>Pray, may Jesus have mercy on her.<br></span>
-<span class="verse-line">She had two breads of <span class="negation">no great size</span>.<br></span>
+<span class="verse-line">She had two loaves of <span class="negation">no great size</span>.<br></span>
 <span class="verse-line">On these she sustained herself for many years.<br></span>
 <span class="verse-line">They all became hard in the first year<br></span>
 <span class="verse-line">as though they were made from a wall.<br></span>
 <span class="verse-line"><span class="line-number">683</span>Each day, Mary ate some,<br></span>
 <span class="verse-line">but this was a small portion.<br></span>
 <span class="verse-line">As soon as she had eaten up her bread,<br></span>
-<span class="verse-line">then she gathered the grass nearby.<br></span>
+<span class="verse-line">then she gathered the grass of the field.<br></span>
 <span class="verse-line">Like other beasts she ate it.<br></span>
-<span class="verse-line"><span class="line-number">688</span>She provided herself with <span class="negation">nothing else</span>.<br></span>
+<span class="verse-line"><span class="line-number">688</span><span class="negation">None</span> of this bothered her.<br></span>
 <span class="verse-line"><span class="folio-number">48v</span>Prone, she drew from a stream.<br></span>
 <span class="verse-line">Like so, she drank. She had no other vessel.<br></span>
 <span class="verse-line">She <span class="negation">does not</span> bemoan her sins<br></span>
@@ -963,12 +963,12 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Then for thirty years, she <span class="negation">never</span> ate<br></span>
 <span class="verse-line">but what the angel of God brought to her.<br></span>
 <span class="verse-line">Devils came to approach her.<br></span>
-<span class="verse-line"><span class="line-number">698</span>Often they used to tempt her,<br></span>
+<span class="verse-line"><span class="line-number">698</span>Often, they used to tempt her,<br></span>
 <span class="verse-line">making her remember all<br></span>
-<span class="verse-line">that she once used to love.<br></span>
-<span class="verse-line">The good eats and the beautiful places<br></span>
+<span class="verse-line">that she once used to love:<br></span>
+<span class="verse-line">the good eats and the fine places<br></span>
 <span class="verse-line">where she was used to playing her games.<br></span>
-<span class="verse-line"><span class="line-number">703</span>Now, she was so blissful<br></span>
+<span class="verse-line"><span class="line-number">703</span>Now, she felt so blessed<br></span>
 <span class="verse-line"><span class="unique-verse">that <span class="negation">nothing</span> hurt her.<br></span></span>
 <span class="verse-line"><span class="negation">Never</span>, in all her life,<br></span>
 <span class="verse-line"><span class="negation">did</span> she think, then, of folly.<br></span>
@@ -1208,16 +1208,16 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">that the son of an emperor<br></span>
 <span class="verse-line">could have taken her with honor.<br></span>
 .....<br>
-<span class="verse-line"><span class="line-number">615</span>So she roamed by day and by night,<br></span>
+<span class="verse-line"><span class="line-number">615</span>She roamed so long by day and by night,<br></span>
 <span class="verse-line">hungry and thirsty and on hard beds,<br></span>
-<span class="verse-line">and so she was in this wood.<br></span>
-<span class="verse-line">She became entirely wild there,<br></span>
+<span class="verse-line">and she was in this wood so long<br></span>
+<span class="verse-line">she became entirely wild there,<br></span>
 <span class="verse-line">but she <span class="negation">never</span> forgot<br></span>
 <span class="verse-line"><span class="line-number">620</span>to pray to saint Mary.<br></span>
 <span class="verse-line">Often, she remembers the image<br></span>
 <span class="verse-line">on which she had made her pledge.<br></span>
 <span class="verse-line">Her soles were all worn out,<br></span>
-<span class="verse-line">and soon her clothes were torn up.<br></span>
+<span class="verse-line">and soon, her clothes were torn up.<br></span>
 <span class="verse-line"><span class="line-number">625</span>As her clothes were in tatters,<br></span>
 <span class="verse-line">her body was left totally naked.<br></span>
 <span class="verse-line">Her own flesh <span class="color-word">changed color,<br></span></span>
@@ -1233,9 +1233,9 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Her chin was so <span class="color-word">black</span> all over.<br></span>
 <span class="verse-line"><span class="color-word">It was like the head of a firebrand,<br></span></span>
 <span class="verse-line">and <span class="color-word">black</span> were her eyes.<br></span>
-<span class="verse-line"><span class="line-number">640</span>There was <span class="negation">not a shred</span> of pride now.<br></span>
+<span class="verse-line"><span class="line-number">640</span>There was <span class="negation">not a shred</span> of pride there now.<br></span>
 <span class="verse-line"><span class="folio-number">20rb</span>If you saw her ears,<br></span>
-<span class="verse-line">they would really seem to you a great marvel<br></span>
+<span class="verse-line">it would seem to you a great marvel<br></span>
 <span class="verse-line">for they were skinny and cracked<br></span>
 <span class="verse-line">and covered in <span class="color-word">white</span> hair.<br></span>
 <div class="empty-line"></div>
@@ -1261,19 +1261,19 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="negation">it was no wonder</span> she was <span class="color-word">blackened<br></span></span>
 <span class="verse-line">for she led a severe life.<br></span>
 <span class="verse-line"><span class="line-number">665</span>After more than forty years in the nude,<br></span>
-<span class="verse-line"><span class="negation">it was no wonder</span> she was wooly.<br></span>
+<span class="verse-line"><span class="negation">it was no wonder</span> she was woolly.<br></span>
 <span class="verse-line">She had poor provisions with her.<br></span>
 <span class="verse-line">Pray, may Jesus have mercy on her.<br></span>
-<span class="verse-line">She had two breads of <span class="negation">no great size</span>.<br></span>
+<span class="verse-line">She had two loaves of <span class="negation">no great size</span>.<br></span>
 <span class="verse-line"><span class="line-number">670</span>On these, she lived for many years.<br></span>
 <span class="verse-line">In the first year, they became hard<br></span>
 <span class="verse-line">as though they were building stones.<br></span>
 <span class="verse-line"><span class="folio-number">20va</span>Each day, Mary ate some,<br></span>
 <span class="verse-line">but this was a small portion.<br></span>
 <span class="verse-line"><span class="line-number">675</span>And as soon as she had eaten up her bread,<br></span>
-<span class="verse-line">then she plucked the grass nearby.<br></span>
+<span class="verse-line">then she plucked the grass of the field.<br></span>
 <span class="verse-line">Like other beasts, she ate it.<br></span>
-<span class="verse-line">And she provided herself with <span class="negation">nothing else.</span><br></span>
+<span class="verse-line">And <span class="negation">none</span> of this bothered her.<br></span>
 <span class="verse-line">Prone, she drank from the stream.<br></span>
 <span class="verse-line"><span class="line-number">680</span>She had <span class="negation">no</span> other vessel.<br></span>
 <span class="verse-line">She <span class="negation">does not</span> bemoan her sins<br></span>
@@ -1283,12 +1283,12 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">685</span>Then, for thirty years, she <span class="negation">never</span> ate<br></span>
 <span class="verse-line">but what the angel of God brought to her.<br></span>
 <span class="verse-line">The devil came to her first.<br></span>
-<span class="verse-line">Often he used to tempt her,<br></span>
+<span class="verse-line">Often, he used to tempt her,<br></span>
 <span class="verse-line">making her remember all<br></span>
-<span class="verse-line"><span class="line-number">690</span>that she once used to love.<br></span>
-<span class="verse-line">The good eats and the places<br></span>
+<span class="verse-line"><span class="line-number">690</span>that she once used to love:<br></span>
+<span class="verse-line">the good eats and the places<br></span>
 <span class="verse-line">where she was used to playing her games.<br></span>
-<span class="verse-line">Now, she was so blissful<br></span>
+<span class="verse-line">Now, she felt so blessed<br></span>
 <span class="verse-line">as she had forgotten all of this.<br></span>
 <span class="verse-line"><span class="line-number">695</span>And in all her life,<br></span>
 <span class="verse-line">she <span class="negation">never</span> thought of folly.<br></span>
@@ -1528,16 +1528,16 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">The son of an emperor<br></span>
 <span class="verse-line">could have taken her with honor.<br></span>
 .....<br>
-<span class="verse-line"><span class="line-number">613</span>So she went by day and by night<br></span>
+<span class="verse-line"><span class="line-number">613</span>She went so long by day and by night,<br></span>
 <span class="verse-line"><span class="unique-verse">through woods, through plains, and through hills,<br></span></span>
 <span class="verse-line">and so deeply she went into the wood<br></span>
 <span class="verse-line">that she became entirely wild there,<br></span>
 <span class="verse-line">but she <span class="negation">never</span> forgot<br></span>
 <span class="verse-line"><span class="line-number">618</span>to pray to saint Mary.<br></span>
-<span class="verse-line">Often she remembered the image<br></span>
+<span class="verse-line">Often, she remembered the image<br></span>
 <span class="verse-line">on which she had made her pledge.<br></span>
-<span class="verse-line">Soon her clothes were worn out,<br></span>
-<span class="verse-line">and soon her soles were stripped.<br></span>
+<span class="verse-line">Soon, her clothes were worn out,<br></span>
+<span class="verse-line">and soon, her soles were stripped.<br></span>
 <span class="verse-line"><span class="line-number">623</span>As her clothes were in tatters,<br></span>
 <span class="verse-line">her body was left totally naked.<br></span>
 <span class="verse-line">Her own flesh <span class="color-word">changed color.<br></span></span>
@@ -1555,11 +1555,11 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">All <span class="color-word">black</span> were her eyes now.<br></span>
 <span class="verse-line"><span class="line-number">638</span>She had, now, <span class="negation">not a shred</span> of pride.<br></span>
 <span class="verse-line">If you saw her ears,<br></span>
-<span class="verse-line">you would come upon a great marvel<br></span>
+<span class="verse-line">it would occur to you a great marvel<br></span>
 <span class="verse-line">that was skinny and cracked<br></span>
-<span class="verse-line">and all wooly with <span class="color-word">white</span> hairs.<br></span>
-<span class="verse-line"><span class="line-number">643</span><span class="color-word">Black</span> and wooly was her chest.<br></span>
-<span class="verse-line">It so ressembled thorny bark.<br></span>
+<span class="verse-line">and all woolly with <span class="color-word">white</span> hairs.<br></span>
+<span class="verse-line"><span class="line-number">643</span><span class="color-word">Black</span> and woolly was her chest.<br></span>
+<span class="verse-line">It so resembled thorny bark.<br></span>
 <span class="verse-line">She <span class="negation">did not</span> have flesh in her breasts,<br></span>
 <span class="verse-line"><span class="negation">nothing more</span> than there is in a glove.<br></span>
 <span class="verse-line">Her arms, her hands, and her long fingers<br></span>
@@ -1581,19 +1581,19 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line"><span class="line-number">663</span><span class="negation">it was no wonder</span> she was <span class="color-word">blackened<br></span></span>
 <span class="verse-line">for she led a very severe life.<br></span>
 <span class="verse-line">After more than forty years in the nude,<br></span>
-<span class="verse-line"><span class="negation">it was no wonder</span> she was wooly.<br></span>
+<span class="verse-line"><span class="negation">it was no wonder</span> she was woolly.<br></span>
 <span class="verse-line">She had poor provisions with her.<br></span>
 <span class="verse-line"><span class="line-number">668</span>May <span class="unique-verse">God</span> have mercy on her.<br></span>
-<span class="verse-line">She had two breads of <span class="negation">no great size</span>.<br></span>
+<span class="verse-line">She had two loaves of <span class="negation">no great size</span>.<br></span>
 <span class="verse-line">On these she lived for many years.<br></span>
 <span class="verse-line">The first year, they became hard<br></span>
 <span class="verse-line">as though they were building stones.<br></span>
 <span class="verse-line"><span class="line-number">673</span>Each day, Mary ate some,<br></span>
 <span class="verse-line">but this was a small portion.<br></span>
 <span class="verse-line">As soon as she had eaten up all her bread,<br></span>
-<span class="verse-line">then she gathered the grass nearby.<br></span>
+<span class="verse-line">then she gathered the grass of the field.<br></span>
 <span class="verse-line">Like other beasts, she ate it.<br></span>
-<span class="verse-line"><span class="line-number">678</span>She provided herself with <span class="negation">nothing else</span>.<br></span>
+<span class="verse-line"><span class="line-number">678</span><span class="negation">None</span> of this bothered her.<br></span>
 <span class="verse-line">Prone, she drank from the stream<br></span>
 <span class="verse-line">for there was <span class="negation">no</span> other vessel.<br></span>
 <span class="verse-line">She <span class="negation">does not</span> bemoan her sins<br></span>
@@ -1603,12 +1603,12 @@ To read these passages in translation, hover over each column with your cursor.
 <span class="verse-line">Then, for thirty years, she ate <span class="negation">only<br></span></span>
 <span class="verse-line">what the angel of God brought to her.<br></span>
 <span class="verse-line">The devil came to her first.<br></span>
-<span class="verse-line"><span class="line-number">688</span>Often he used to tempt her,<br></span>
+<span class="verse-line"><span class="line-number">688</span>Often, he used to tempt her,<br></span>
 <span class="verse-line">making her remember all<br></span>
-<span class="verse-line">that she once used to love.<br></span>
-<span class="verse-line">The beautiful delights and the beautiful places<br></span>
+<span class="verse-line">that she once used to love:<br></span>
+<span class="verse-line">the fine delights and the fine places<br></span>
 <span class="verse-line">where she was used to playing her games.<br></span>
-<span class="verse-line"><span class="line-number">693</span>Now, she was blissful<br></span>
+<span class="verse-line"><span class="line-number">693</span>Now, she felt blessed<br></span>
 <span class="verse-line">as she had forgotten all of this<br></span>
 <span class="verse-line">before long. Then for all her life,<br></span>
 <span class="verse-line">she <span class="negation">never</span> thought of folly.<br></span>
