--- a/references.qmd
+++ b/references.qmd
@@ -15,7 +15,7 @@
 
 > Berlin, Staatsbibliothek, *Photographien von ausgewählten Fragmenten aus der Omayyaden-Moschee in Damaskus in verschiedenen Sprachen*, 1908. Mss simulata orientalia 6, Orientalische Handschriften digital, Photographs 89 (verso) & 101 (recto), http://resolver.staatsbibliothek-berlin.de/SBB000074F100000000.
 
-## Editions & Translations {.unnumbered}
+## Lives of Mary the Egyptian: Editions & Translations {.unnumbered}
 Baker, Alfred Thomas. “Vie de Sainte Marie L’Egyptienne,” *Revue des langues romanes*, LIX (1916-1917), pp. 145-401. [edition]
 
 Cooke, Matthew. *Robert Grossetete’s Chasteau d’Amour to Which Are Added ‘La Vie de sainte Marie Egyptienne’ and an English Version of the Chasteau d’Amour*. Caxton Society, 1852, pp. 62-113. https://hdl.handle.net/2027/hvd.32044081105124?urlappend=%3Bseq=76%3Bownerid=114643825-80. [edition]
@@ -30,7 +30,7 @@ Ogden, Amy V., translator. *The Life of Saint Mary the Egyptian*. University of 
 
 Tobler, Adolf. “Bruchstücke altfranzösischer Dichtung aus den in der Kubbet in Damaskus gefundenen Handschriften, 2. Ein Bruchstück eines Lebens der h. Maria aus Aegypten.” *Sitzungsberichte der königlich-preussischen Akademie der Wissenschaften, philosophisch-historische Classe*, LXIII, Berlin, 1903, pp. 966-969. [edition]
 
-## Mary the Egyptian Scholarship
+## Lives of Mary the Egyptian: Scholarship
 Acquafredda, Marilisa. “Modelli di santità femminile orientale nella Puglia del Medioevo: l'‘eremita penitente’ Maria Egiziaca.” *Archivio storico pugliese*, vol. 61, 2008, pp. 25-58.
 
 Beresford, Andrew M. “Hagiography, corporeality, and the gaze: sexual/ascetic tension in the *Vida de Santa María Egipciaca*.” *Gender and Exemplarity in Medieval and Early Modern Spain*. Eds. Morrás, María, Sanmartín Bastida, Rebeca and Kim, Yonsoo. The Medieval and Early Modern Iberian World; 79. Leiden: Brill, 2020. pp.43-74.
