--- a/abstract.qmd
+++ b/abstract.qmd
@@ -3,4 +3,32 @@ title: "Abstract"
 format: html
 ---
 
-This is where my abstract will go...
+```{r setup, include=FALSE}
+# Load required libraries
+library(rvest)
+library(xml2)
+library(dplyr)
+library(stringr)
+
+source("extract_sections_from_googledoc.R")
+source("convert-html-to-markdown.R")
+```
+
+```{r content, echo=FALSE, results='asis'}
+# Extract Abstract from google doc (suppress output)
+invisible(
+    extract_section_by_name(
+        html_file = "temp_files/dissertation.html", 
+        section_name = "Abstract", 
+        output_file = "temp_files/googledoc_abstract.html", 
+        clean_html = FALSE, 
+        verbose = FALSE
+    )
+)
+
+# Read and convert the abstract HTML to markdown
+converted_markdown <- convert_html_to_markdown("temp_files/googledoc_abstract.html")
+
+# Output the markdown content
+cat(converted_markdown)
+```
