--- a/chapter1.qmd
+++ b/chapter1.qmd
@@ -2,4 +2,32 @@
 title: "1. On Digital Editing"
 ---
 
-This is the first chapter of my dissertation...
+```{r setup, include=FALSE}
+# Load required libraries
+library(rvest)
+library(xml2)
+library(dplyr)
+library(stringr)
+
+source("extract_sections_from_googledoc.R")
+source("convert-html-to-markdown.R")
+```
+
+```{r content, echo=FALSE, results='asis'}
+# Extract chapter 1 from google doc (suppress output)
+invisible(
+    extract_section_by_name(
+        html_file = "temp_files/dissertation.html", 
+        section_name = "1. On Digital Editing", 
+        output_file = "temp_files/googledoc_chapter1.html", 
+        clean_html = FALSE, 
+        verbose = FALSE
+    )
+)
+
+# Read and convert the HTML to markdown
+converted_markdown <- convert_html_to_markdown("temp_files/googledoc_chapter1.html")
+
+# Output the markdown content
+cat(converted_markdown)
+```
